--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
         <java.version>8</java.version>
     </properties>
     <dependencies>
+        <!--fastjson依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
+        </dependency>
+
         <!--    swagger相关↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓   -->
         <dependency>
             <groupId>io.springfox</groupId>
