--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,18 @@
         <!--mybatis-plus相关  begin-->
         <dependency>
             <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+
+        <!--vvvvvvvvvvvvvvvvvvvvv-->
+ <!--       <dependency>
+            <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.5.3.1</version>
         </dependency>
@@ -81,12 +93,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.5.3.1</version>
-        </dependency>
+        </dependency>-->
         <!--mybatisplus代码生成器依赖下面这个包↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓-->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.28</version>
+            <version>2.3.29</version>
             <!--↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑-->
         </dependency>
 
@@ -122,6 +134,13 @@
             <version>5.1.49</version>
         </dependency>
         <!--mysql数据库驱动↑↑↑↑↑↑↑↑↑↑↑-->
+        <!--mariadb数据库驱动↓↓↓↓↓↓↓↓↓↓-->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <!--mariadb数据库驱动↑↑↑↑↑↑↑↑↑↑↑-->
         <!--下面是pg数据库驱动↓↓↓↓↓↓↓↓↓↓-->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -198,7 +217,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
     </dependencies>
 
     <build>
