--- a/pom.xml
+++ b/pom.xml
@@ -223,11 +223,11 @@
             <version>0.1.54</version>
         </dependency>
         <!--   spring security  安全相关  下面↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓  -->
-        <dependency>
+    <!--    <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>3.0.4</version>
-        </dependency>
+        </dependency>-->
         <!--   spring security  安全相关  上面↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑  -->
         <!--   注解处理器1   相关  下面↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓  -->
         <dependency>
